# bonk

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
nix/: default.nix  home.nix  module.nix
src/: env.rs  exec.rs  flake.rs  host.rs  lib.rs  main.rs  output.rs
src/cli/: build.rs  mod.rs  os.rs  rebuild.rs  root.rs  store.rs  try_pkg.rs  update.rs
src/commands/: build.rs  mod.rs  os.rs  rebuild.rs  try_pkg.rs  update.rs
src/commands/store/: gc.rs  info.rs  mod.rs  nuke.rs  optimize.rs  repair.rs
